@@ -39,6 +39,14 @@ significant bit, and so on.
 A bitlist of wxJOY\_BUTTONn identifiers, where n is 1, 2, 3 or 4 
 is available for historical reasons.
 
+\constfunc{bool}{GetButtonState}{\param{unsigned}{ id}}
+
+Returns the state of the specified joystick button.
+
+\wxheading{Parameters}
+
+\docparam{id}{The button id to report, from 0 to \helpref{GetNumberButtons()}{wxjoystickgetnumberbuttons} - 1}
+
 \membersection{wxJoystick::GetManufacturerId}\label{wxjoystickgetmanufacturerid}
 
 \constfunc{int}{GetManufacturerId}{\void}
@@ -99,6 +107,14 @@ Returns the product name for the joystick.
 \constfunc{wxPoint}{GetPosition}{\void}
 
 Returns the x, y position of the joystick.
+
+\constfunc{int}{GetPosition}{\param{unsigned}{ axis}}
+
+Returns the position of the specified joystick axis.
+
+\wxheading{Parameters}
+
+\docparam{axis}{The joystick axis to report, from 0 to \helpref{GetNumberAxes()}{wxjoystickgetnumberaxes} - 1.}
 
 \membersection{wxJoystick::GetPOVPosition}\label{wxjoystickgetpovposition}
 
